--- a/GuestBookAppservice.yml
+++ b/GuestBookAppservice.yml
@@ -1,15 +1,15 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: GuestBook-Service
+  name: guestbook-service
   labels:
-    name: GuestBook-Service
-    app: Guest-Book-app
+    name: guestbook-service
+    app: guest-book-app
 spec:
-  type: LoadBalancer
+   type: LoadBalancer
    ports:
      - port: 80
        targetPort: 80
    selector:
-     name: GuestBook-webapp-pod
-     app: Guest-Book-app
+       name: guestbook-webapp-pod
+       app: guest-book-app
