--- a/redis-service.yml
+++ b/redis-service.yml
@@ -4,11 +4,11 @@ metadata:
   name: redis
   labels:
     name: redis-service
-    app: Guest-Book-app
+    app: guest-book-app
 spec:
   ports:
-    - port: 6379
-      targetport: 6379
+  - port: 6379
+    targetPort: 6379
   selector:
     name: redis-pod
-    app: Guest-Book-app
+    app: guest-book-app
