--- a/redis-app.yml
+++ b/redis-app.yml
@@ -1,10 +1,10 @@
 apiVersion: v1
-kind: pod
+kind: Pod
 metadata:
   name: redis-pod
   labels:
     name: redis-pod
-    app: Guest-Book-app
+    app: guest-book-app
 spec:
   containers:
     - name: redis
